upgraded ui for battle view, fixing the excess height for a scrollbar; made the player labels match the game board in style (with black boxes); and updated the unit info sidebar, to center all of the text, and also put it in a partially transparent rounded box

--- a/src/Components/Game/BattleMap/BattleMap.css
+++ b/src/Components/Game/BattleMap/BattleMap.css
@@ -1,49 +1,82 @@
-.battle-player-label {
-    margin: 1vh 1vw;
+.battle-view-player-labels-container {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+}
+
+.battle-view-player-label {
+    width: 40vw;
+    min-width: 40vw;
+    max-width: 40vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
     border-radius: 10px;
-    box-shadow: 2px 3px  7px black;
+    box-shadow: 2px 2px 0px 2px black;
+    background-color: black;
 }
 
-.battle-own-player-label {
-    color: black;
-    
+.battle-view-own-player-label {
+    color: lime;
+    text-align: center;
+    margin: auto;
 }
 
-.battle-other-player-label {
-    color: red
+.battle-view-other-player-label {
+    color: pink;
+    text-align: center;
+    margin: auto;
 }
 
-.battle-active-turn {
-    background-color: lightgreen;
-    animation-name: blink; 
-    animation-duration: 1.5s; 
+.battle-view-active-turn {
+    animation-name: battle-view-player-label-blink; 
+    animation-duration: 1.2s; 
     animation-iteration-count: infinite;
     transition-timing-function: linear;
+    box-shadow: 0px 0px 3px 3px lightgoldenrodyellow;
 }
 
-.battle-inactive-turn {
-    background-color: white;
+.battle-view-inactive-turn {
+    opacity: 50%;
 }
 
-@keyframes blink {
+@keyframes battle-view-player-label-blink {
   50% {
-    filter: saturate(2);
-    opacity: 80%;
+    box-shadow: 0px 0px 10px 10px lightgoldenrodyellow;
   }
 }
 
-.current-unit-class-title {
+
+.battle-view-class-round-label {
+    width: 10vw;
+    min-width: 10vw;
+    max-width: 10vw;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
     text-align: center;
-    color: lightyellow;
+    margin: 1vh 1vw;
+}
+
+.current-unit-class-title {
+    margin: auto;
+    text-align: center;
+    color: skyblue;
     animation-name: blink; 
-    animation-duration: 1.5s; 
+    animation-duration: 1.5s;
     animation-iteration-count: infinite;
     transition-timing-function: linear;
 }
 
+.battle-view-round-counter {
+    margin: auto;
+    text-align: center;
+}
+
 .ambush-title {
-    width: 100%;
-    margin-top: 1vh;
+    position: relative;
+    padding: 0px;
+    height: 80%;
+    max-height: 80%;
+    min-height: 80%;
     border-radius: 10px;
     box-shadow: 2px 2px 5px 2px black;
     animation-name: blink; 
@@ -52,7 +85,13 @@
     transition-timing-function: linear;
 }
 
-.battle-map-container {
+.battle-view-ambush-title-container {
+    position: relative;
+    margin: auto;
+    padding: 0;
+}
+
+.battle-view-container {
     height: 100vh;
     min-height: 100vh;
     max-height: 100vh;
@@ -61,4 +100,16 @@
     max-width: 100vw;
     background-image: url('./in-battle-background.jpg');
     background-size: 100% 100%;
+}
+
+.battle-view-player-label-container {
+    height: 8vh;
+    min-height: 8vh;
+    max-height: 8vh;
+}
+
+.battle-view-army-boards-and-sidebar-container {
+    height:  90vh;
+    min-height: 90vh;
+    max-height: 90vh;
 }
