--- a/src/Components/Game/BattleMap/BattleSidebar/BattleSidebar.css
+++ b/src/Components/Game/BattleMap/BattleSidebar/BattleSidebar.css
@@ -1,3 +1,16 @@
+.battle-sidebar-container {
+  position: relative;
+  height: 100%;
+  max-height: 100%;
+  min-height: 100%;
+  margin: auto;
+  margin-right: 1vw;
+  text-align: center;
+  background-color: rgba(35, 35, 35, 0.5);
+  border-radius: 15px;
+  padding: 1vw 1vh;
+}
+
 .tiny-asteroid-icon-battle {
   display: inline-block;
   margin-left: auto;
